--- a/e-shop/src/Pages/Home.css
+++ b/e-shop/src/Pages/Home.css
@@ -30,7 +30,7 @@
 .hero-button {
     align-items: center;
     background-color: #1976d20a;
-    border-color: #1976d2;
+    border-color: #000408;
     border-radius: 8px;
     border-style: solid;
     border-width: 1px;
